After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 692935 - videomixer: hangs on eos
videomixer: hangs on eos
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
1.x
Other Linux
: Normal normal
: 1.0.6
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-01-31 12:01 UTC by Matthew Waters (ystreet00)
Modified: 2013-01-31 15:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
videomixer: fix eos timestamp check (954 bytes, patch)
2013-01-31 12:03 UTC, Matthew Waters (ystreet00)
none Details | Review

Description Matthew Waters (ystreet00) 2013-01-31 12:01:51 UTC
The following pipeline fails to shutdown:

videotestsrc num-buffers=20 ! videomixer ! fakesink

When the EOS comes from videotestsrc,  videomixer fails to recognize that the EOS has been sent.  From what I can see, at EOS, the buffer's end time is equal to the output start time and thus fails the < check and sets eos to false.
Comment 1 Matthew Waters (ystreet00) 2013-01-31 12:03:05 UTC
Created attachment 234901 [details] [review]
videomixer: fix eos timestamp check
Comment 2 Wim Taymans 2013-01-31 15:48:08 UTC
commit 4fc33bf6f49952984691ea19277cecf9f67769b2
Author: Matthew Waters <ystreet00@gmail.com>
Date:   Thu Jan 31 22:55:18 2013 +1100

    videomixer: fix eos timestamp check
    
    fixes hang in videotestsrc num-buffers=20 ! videomixer ! fakesink
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=692935